--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -91,7 +91,7 @@
                   <div class="actions column flex">
                      <p class="sr-only">Ações</p>
                      <a
-                        href="/job/edit.html"
+                        href="/job/edit"
                         class="button white edit"
                         title="Editar Job"
                      >
@@ -119,7 +119,7 @@
                   <div class="actions column flex">
                      <p class="sr-only">Ações</p>
                      <a
-                        href="/job/edit.html"
+                        href="/job/edit"
                         class="button white edit"
                         title="Editar Job"
                      >
