--- a/src/views/job.ejs
+++ b/src/views/job.ejs
@@ -23,14 +23,7 @@
       />
    </head>
    <body id="page-job">
-      <header class="page-header inner">
-         <div class="container animate-up">
-            <a href="/index" class="back">
-               <img src="/images/back.svg" alt="" />
-            </a>
-            <h1>Adicionar Novo Job</h1>
-         </div>
-      </header>
+      <%- include('parts/page-header', {title: 'Job'}) %>
 
       <div class="container flex animate-up delay-2">
          <main>
