--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -35,9 +35,9 @@
                   Você tem 2 horas livres no seu dia
                </span>
                <a href="/profile" id="avatar-profile">
-                  <p><%= profile.name %><span>Ver perfil</span></p>
+                  <p>A<span>Ver perfil</span></p>
                   <img
-                     src="<%= profile.avatar %>" alt="<%= profile.name %>"
+                     src="https://avatars.githubusercontent.com/u/95248045?v=4'" alt=""
                   />
                </a>
             </section>
@@ -75,63 +75,36 @@
          <main class="animate-up delay-2">
             <h1 class="sr-only">Trabalhos</h1>
 
-            <div class="cards">
-               <div class="card progress" data-id="1">
-                  <div class="id column">1</div>
-                  <div class="name column">Pizzaria Guloso</div>
-                  <div class="deadline column">
-                     <span>Prazo</span>
-                     <p>3 dias para a entrega</p>
-                  </div>
-                  <div class="amount column">
-                     <span>Valor</span>
-                     <p>R$ 4500,00</p>
-                  </div>
-                  <div class="status badge column">Em andamento</div>
-                  <div class="actions column flex">
-                     <p class="sr-only">Ações</p>
-                     <a
-                        href="/job/edit"
-                        class="button white edit"
-                        title="Editar Job"
-                     >
-                        <img src="/images/edit-24.svg" alt="Editar Job" />
-                     </a>
-                     <button class="delete button white" title="Excluir Job">
-                        <img src="/images/trash-24.svg" alt="Excluir Job" />
-                     </button>
-                  </div>
-               </div>
-               <!-- end card -->
+               <div class="cards">
 
-               <div class="card done" data-id="2">
-                  <div class="id column">2</div>
-                  <div class="name column">OneTwo Project</div>
-                  <div class="deadline column">
-                     <span>Prazo</span>
-                     <p>3 dias para a entrega</p>
-                  </div>
-                  <div class="amount column">
-                     <span>Valor</span>
-                     <p>R$ 4500,00</p>
-                  </div>
-                  <div class="status badge column">Encerrado</div>
-                  <div class="actions column flex">
-                     <p class="sr-only">Ações</p>
-                     <a
-                        href="/job/edit"
-                        class="button white edit"
-                        title="Editar Job"
-                     >
-                        <img src="/images/edit-24.svg" alt="Editar Job" />
-                     </a>
-                     <button class="delete button white" title="Excluir Job">
-                        <img src="/images/trash-24.svg" alt="Excluir Job" />
-                     </button>
-                  </div>
-               </div>
-            </div>
-            <!-- end cards -->
+                  <!-- creates a job for each job inside job array-->
+                  <% jobs.forEach((job) => { %>
+
+                     <div class="card progress" data-id="<%= job.id %>">
+                        <div class="id column"><%= job.id %></div>
+                        <div class="name column"> <%= job.name %>  </div>
+                        <div class="deadline column">
+                           <span>Prazo</span>
+                           <p>3 dias para a entrega</p>
+                        </div>
+                        <div class="amount column">
+                           <span>Valor</span>
+                           <p>R$ 4500,00</p>
+                        </div>
+                        <div class="status badge column">Em andamento</div>
+                        <div class="actions column flex">
+                           <p class="sr-only">Ações</p>
+                           <a href="/job/edit" class="button white edit" title="Editar Job">
+                              <img src="/images/edit-24.svg" alt="Editar Job">
+                           </a>
+                           <button class="delete button white" title="Excluir Job">
+                              <img src="/images/trash-24.svg" alt="Excluir Job">
+                           </button>
+                        </div>
+                     </div>
+
+                  <% }) %> 
+               <!-- end cards -->
          </main>
       </div>
       <!-- end container -->
