--- a/src/views/profile.ejs
+++ b/src/views/profile.ejs
@@ -31,14 +31,16 @@
             <h2><%= profile.name %></h2>
             <p>
                O valor da sua hora é <br />
-               <strong>R$ 75,00</strong>
+               <strong
+                  >R$ <%= profile['amount-hour'].toFixed(2).replace('.', ',') %>
+               </strong>
             </p>
             <button class="button green" form="form-profile" type="submit">
                Salvar dados
             </button>
          </aside>
          <main>
-            <form id="form-profile">
+            <form id="form-profile" method="post" action="/profile">
                <fieldset>
                   <legend>Dados do perfil</legend>
                   <div class="separator light"></div>
@@ -115,7 +117,7 @@
                         >
                         <input type="number" id="vacation-per-year"
                         name="vacation-per-year" value="<%=
-                        profile["vacations-per-year"] %>" />
+                        profile["vacation-per-year"] %>" />
                      </div>
                   </div>
                </fieldset>
