--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -35,10 +35,8 @@
                   Você tem 2 horas livres no seu dia
                </span>
                <a href="/profile" id="avatar-profile">
-                  <p>A<span>Ver perfil</span></p>
-                  <img
-                     src="https://avatars.githubusercontent.com/u/95248045?v=4'" alt=""
-                  />
+                  <p><%= profile.name %><span>Ver perfil</span></p>
+                  <img src="<%= profile.avatar %>" alt="<%= profile.name %> " />
                </a>
             </section>
 
@@ -49,15 +47,15 @@
 
                <div class="info">
                   <div class="total">
-                     <strong>12</strong>
+                     <strong><%= statusCount.total %> </strong>
                      Projetos ao total
                   </div>
                   <div class="in-progress">
-                     <strong>7</strong>
+                     <strong><%= statusCount.progress %> </strong>
                      Em andamento
                   </div>
                   <div class="finished">
-                     <strong>4</strong>
+                     <strong><%= statusCount.done %> </strong>
                      Encerrados
                   </div>
                </div>
@@ -74,13 +72,12 @@
       <div class="container">
          <main class="animate-up delay-2">
             <h1 class="sr-only">Trabalhos</h1>
-
                <div class="cards">
 
                   <!-- creates a job for each job inside job array-->
                   <% jobs.forEach((job) => { %>
 
-                     <div class="card <%= job.status %> <%= job.remaining == 1 ? 'warning' : '' %>" data-id="<%= job.id %>">
+                     <div class="card <%= job.status %> " data-id="<%= job.id %>">
                         <div class="id column"><%= job.id %></div>
                         <div class="name column"> <%= job.name %>  </div>
                         <div class="deadline column">
