add function to calculate free time

--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -32,7 +32,11 @@
                <img id="logo" src="/images/logo.svg" alt="Logo" />
                <span id="notification">
                   <img src="/images/alert-octagon.svg" alt="Alerta" />
-                  Você tem 2 horas livres no seu dia
+                  <% if (freeTime >= 1) { %>
+                     Você tem <%= freeTime %>  horas livres no seu dia
+                  <% } else { %>
+                     Você não tem horas livres no seu dia
+                  <% } %>   
                </span>
                <a href="/profile" id="avatar-profile">
                   <p><%= profile.name %><span>Ver perfil</span></p>
